@@ -26,8 +26,6 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 
 <a name="NOD1"></a>
 <a name="SEC_Top"></a>
-<a name="NOD1"></a>
-<a name="SEC_Top"></a>
 <table cellpadding="1" cellspacing="1" border="0">
 <tr><td valign="middle" align="left">[<a href="#SEC_Top" title="Cover (top) of document">Top</a>]</td>
 <td valign="middle" align="left">[<a href="xemacs_toc.html#SEC_Contents" title="Table of contents">Contents</a>]</td>
